@startuml domain model

hide circle
hide members
hide methods

skinparam class {
    BackgroundColor #EEE
    ArrowColor Black
    BorderColor Black
}

title Domain Model

package "Black Fennec" <<Frame>> {

    package "Structure" <<Frame>>{
        class "Structure"               as s
    }

    package "Layers" <<Frame>> {
        class "Layer"                   as la
        class "Merged Layer"            as ml
        class "Overlay"                 as ol

        la -u-|> "Structure"
        ml -u-|> la
        ol -u-|> la
    }

    package "Type System" <<Frame>>{
        class "Interpretation Service"  as is 
        class "Interpretation"          as i
        class "Type Registry"           as typer
        class "Type Parser"             as tp
        class "Type Loader"             as tl

        package "Type" <<Frame>> {
            class "Type"                as t
            class "Map Type"            as mapt
            class "List Type"           as lt
            class "String Type"         as st
            class "Number Type"         as nt
            class "Boolean Type"        as bt
            class "Null Type"           as nut
            class "Reference Type"      as reft

            mapt -u-|> t
            lt -u-|> t
            st -u-|> t
            nt -u-|> t
            bt -u-|> t
            nut -u-|> t
            reft -u-|> t

        }

        typer ---> t : contains
        is ---> typer : uses
        tp ---> t : creates
        tp ---> s : parses
        tl --> tp : uses
    }

    package "Document System" <<Frame>> {
        class "Document Factory"        as df
        class "Document"                as d

        df  ---> d : creates
    }


    package "Extension System" <<Frame>> {
        class "Extension API" as api
    }
}

' relations

d ---> s : contains

is ---> s : interprets
is ---> i : provides
i ---> t : is a collection of
tl ---> df : uses

api ---> is : references
api ---> tl : references
api ---> typer : references

tp ---> ml : applies
tl ---> ol : applies


@enduml
